<resources>
    <string name="app_name">2mbor-trabalho-final</string>
    <string name="login_title">Login</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_title">Register</string>
    <string name="register_button">Register</string>
    <string name="login_link">Click to login</string>
    <string name="register_link">Click to register</string>
    <string name="logout_button">Logout</string>
    <string name="required_fields_error_message">Fields are required!</string>
    <string name="invalid_email_error_message">Invalid e-mail!</string>
    <string name="registered_email_error_message">E-mail already registered!</string>
    <string name="register_error_message">Error while registering user!</string>
    <string name="register_success_message">User successfully registered!</string>
    <string name="login_invalid_user_message">User not registered!</string>
    <string name="login_invalid_credentials_message">E-mail or password don\'t match!</string>
    <string name="login_error_message">Error while logging in user!</string>
    <string name="login_success_message">User logged in!</string>
    <string name="session_user_not_loggedin_error_message">User not logged in!</string>
    <string name="add_event">Add event</string>
    <string name="create_event_title">Create event</string>
    <string name="name_hint">Name</string>
    <string name="address_hint">Address</string>
    <string name="create_event_error_message">Error while creating event!</string>
    <string name="save_event_success_message">Event successfully created!</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="home_title">Events</string>
    <string name="create_event_date_hint">Date:</string>
    <string name="select_date_button">Select date</string>
    <string name="create_event_time_hint">Time:</string>
    <string name="back_button">Back</string>
    <string name="select_time_button">Select time</string>
    <string name="save_event_button">Save event</string>
    <string name="date_placeholder">Date: %s</string>
    <string name="time_placeholder">Time: %s</string>
    <string name="select_date_dialog_title">Select a date</string>
    <string name="select_time_dialog_title">Select a time</string>
    <string name="edit_event_title">Edit event</string>
    <string name="edit_event_error_message">Error while saving event!</string>
    <string name="edit_event_success_message">Event successfully edited!</string>
    <string name="get_events_error_message">Error while loading events!</string>
    <string name="delete_event_error_message">Error while deleting event!</string>
    <string name="delete_event_success_message">Event successfully deleted!</string>
    <string name="delete_dialog_title">Delete event</string>
    <string name="delete_dialog_text">Are you sure?</string>
    <string name="delete_dialog_confirm_button">Yes</string>
    <string name="delete_dialog_cancel_button">No</string>
    <string name="empty_event_message">Event is empty!</string>
    <string name="home_no_events">No events!</string>
</resources>