<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_default"
    tools:context=".feature.create_event.presentation.CreateEventFragment">
    <TextView
        android:id="@+id/tvBack"
        android:text="@string/back_button"
        style="@style/ButtonDefaultTransparent"
        android:layout_margin="0dp"
        android:paddingVertical="@dimen/padding_tiny"/>

    <TextView
        android:text="@string/edit_event_title"
        style="@style/Title"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:hint="@string/name_hint"
            style="@style/TextInputEditText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin_small">
        <TextView
            android:id="@+id/tvDate"
            android:text="@string/create_event_date_hint"
            style="@style/DateTimeText"/>
        <Button
            android:id="@+id/btnPickDate"
            android:text="@string/select_date_button"
            style="@style/ButtonDefault"
            android:layout_margin="0dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin_small">
        <TextView
            android:id="@+id/tvTime"
            android:text="@string/create_event_time_hint"
            style="@style/DateTimeText"/>
        <Button
            android:id="@+id/btnPickTime"
            android:text="@string/select_time_button"
            style="@style/ButtonDefault"
            android:layout_margin="0dp"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddress"
            android:hint="@string/address_hint"
            style="@style/TextInputEditText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/ProgressBar"/>

    <Button
        android:id="@+id/btnSaveEvent"
        android:text="@string/save_event_button"
        style="@style/ButtonFullWidth"/>
</LinearLayout>