<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".feature.login.presentation.LoginFragment"
    android:padding="@dimen/padding_default">

    <TextView
        android:text="@string/login_title"
        style="@style/Title"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiEmail"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            style="@style/TextInputEditText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiPassword"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            style="@style/TextInputEditText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/ProgressBar"/>

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login_button"
        style="@style/ButtonFullWidth"/>

    <TextView
        android:id="@+id/tvRegisterLink"
        android:text="@string/register_link"
        style="@style/Link"/>
</LinearLayout>