<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_tiny"
    tools:context=".feature.home.presentation.HomeFragment">

    <TextView
        android:id="@+id/tvUserEmail"
        android:text="@string/home_title"
        style="@style/Title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end">
        <Button
            android:id="@+id/btnLogout"
            android:text="@string/logout_button"
            style="@style/ButtonDefaultTransparent" />
        <Button
            android:id="@+id/btnAddEvent"
            android:text="@string/add_event"
            style="@style/ButtonDefault"
            android:layout_marginBottom="@dimen/padding_default" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/ProgressBar"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tvNoEvents"
        android:text="@string/home_no_events"
        style="@style/NoEventsText"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEventsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:itemCount="2"
        tools:listitem="@layout/event_list_item" />

</LinearLayout>